<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_GRN" Id="{4c52fe16-42bd-438e-8711-f613815f983f}">
    <Declaration><![CDATA[TYPE T_GRN :
STRUCT
	io:		T_GRN_IO;
	ctrl:	T_GRN_CTRL;
	id:		T_GRN_ID;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>