<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_GRN_IO" Id="{e10f9a09-a4b3-49fa-a899-278d341d977b}">
    <Declaration><![CDATA[TYPE T_GRN_IO :
STRUCT
	Out_intCommand: REFERENCE TO INT;
	Out_intConveyorBelt: REFERENCE TO INT;
	Out_intPowderVibrator: REFERENCE TO INT;
	Out_intConveyorVibrator: REFERENCE TO INT;
	Out_uinFilterClearingCycleTime_min: REFERENCE TO UINT;
	In_bolSystemOk: REFERENCE TO BOOL;
	In_bolMainPressureError: REFERENCE TO BOOL;
	In_bolEoffOrFuseOk: REFERENCE TO BOOL;
	In_bolPowderLowWarning: REFERENCE TO BOOL;
	In_bolAutoMode: REFERENCE TO BOOL;
	In_intState: REFERENCE TO INT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>