<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <POU Name="cycle_Grn" Id="{6622eaea-7002-4bb9-9027-a844e797871b}">
    <Declaration><![CDATA[FUNCTION cycle_Grn : BOOL
VAR_INPUT
	pGrn: POINTER TO T_GRN;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[pGrn^.ctrl.fbGrn.In_bolAutoMode				:= pGrn^.io.In_bolAutoMode;
pGrn^.ctrl.fbGrn.In_bolEoffOrFuseOk			:= pGrn^.io.In_bolEoffOrFuseOk;
pGrn^.ctrl.fbGrn.In_bolMainPressureError	:= pGrn^.io.In_bolMainPressureError;
pGrn^.ctrl.fbGrn.In_bolPowderLowWarning		:= pGrn^.io.In_bolPowderLowWarning;
pGrn^.ctrl.fbGrn.In_bolSystemOk				:= pGrn^.io.In_bolSystemOk;
pGrn^.ctrl.fbGrn.In_intState				:= pGrn^.io.In_intState;
pGrn^.ctrl.fbGrn();
pGrn^.io.Out_intCommand						:= pGrn^.ctrl.fbGrn.Out_intCommand;]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>